# configfile

./: README.md  zata.zata
confcommons/: Cargo.toml
confcommons/src/: backend.rs  data.rs  lib.rs  utils.rs  validation.rs
confenvs/: Cargo.toml
confenvs/src/: lib.rs
doc/: confile.md  toc.md  zata.md  zatades.md
zata-common/: Cargo.toml
zata-common/src/: ctree.rs  interfaces.rs  lib.rs
zataver/: Cargo.toml  zata.zata  zata.zataaa
zataver/src/: ctree.rs  filters.rs  interfaces.rs  main.rs  pars_tools.rs  parse.rs  style.rs
