[package]
name = "zataver"
version = "0.1.0"
edition = "2021"
authors = ["Paolo De Donato"]
description = "Zata verifier"
repository = "https://github.com/Loara/configfile"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
